part3-security-access/network-policies/frontend-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-to-frontend
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: frontend
  ingress:
    - {}
  policyTypes:
    - Ingress
